# scils_pbp_export

./: .gitignore  README.md  Worker.py  controller.py  export_handler.py  feature_extractor_gui.py  feature_extractor_gui.spec  feature_loading_handler.py  logger_service.py  output.py  pyproject.toml  scils_utils.py  setup.iss
.github/workflows/: package.yml
static/: style.qss
wheel/: scilslab-8.1.122-cp313-cp313-win_amd64.whl
